--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2>Лабораторні заняття</h2>
         <div class="work-container">
             <div class="work-item">
-                <a href="lb 1/lab1.html">Лабораторна робота 1</a>
+                <a href="Lab 2">Лабораторна робота 2</a>
                 <p>Створити форму для заповнення даних реєстрації.</p>
             </div>
             <div class="work-item">
