--- a/index.html
+++ b/index.html
@@ -47,20 +47,31 @@
                 <p>Створити форму для заповнення даних реєстрації.</p>
             </div>
             <div class="work-item">
-                <a href="lab 2/lab2.html">Лабораторної робота 2</a>
+                <a href="Lab 3">Лабораторної робота 3</a>
                 <p>Виконати список задач не редагуючи вихідний html файл.</p>
             </div>
             <div class="work-item">
-                <a href="lab 3/lab3.html">Лабораторної робота 3</a>
+                <a href="Lab 4">Лабораторної робота 4</a>
                 <p>Створити копію структури головної сторінки YouTube використовуючи FlexBox.</p>
             </div>
             <div class="work-item">
-                <a href="lab 4/lab4.html">Лабораторної робота 4</a>
+                <a href="Lab 5">Лабораторної робота 5</a>
+                <p>Використовуючи шаблон розробити сторінку планера.</p>
+            </div>
+            <div class="work-item">
+                <a href="Lab 6">Лабораторної робота 6</a>
+                <p>Використовуючи шаблон розробити сторінку планера.</p>
+            </div>
+            <div class="work-item">
+                <a href="Lab 5">Лабораторної робота 5</a>
+                <p>Використовуючи шаблон розробити сторінку планера.</p>
+            </div>
+            <div class="work-item">
+                <a href="Lab 7">Лабораторної робота 7</a>
                 <p>Використовуючи шаблон розробити сторінку планера.</p>
             </div>
         </div>
     </section>
-    
     <footer>
         <p>Контактні дані: zykovmihail35@gmail.com</p>
         <p>Соціальні мережі: <a href="https://www.instagram.com/_.misha_z_?igsh=b2hvbDMxcm9reGJv&utm_source=qr">Instagram</a>
